--- a/src/Var.css
+++ b/src/Var.css
@@ -1,9 +1,14 @@
 :root {
   --background-main: #f5f5f5;
   --header-and-menu: #694e73;
+  --login-background: #694e73;
   --home-icons: #adc2b9;
   --add-button-background-color: #adc2b9;
   --header-and-menu-icons: #f5f5f5;
+  --constrast-icons: #2f2e2c;
+  --constrast-font-color: #2f2e2c;
+  --dark-font-color: #121212;
+  --inversed-constrast-font-color: #f5f5f5;
   --column-and-selection-background: #adc2b9;
   --note-background: #f5f5f5;
   --note-answer-background: #e1e1e1;
@@ -12,10 +17,8 @@
   --menu-font-color: #ffffff;
   --button-font-color: #694E73;
   --button-selected-font-color: #b054d1;
-  --selection-font-color: #000000;
   --column-font-color: #274035;
   --font-base: 'Poppins', sans-serif;
-  --font-secondary: 'Poppins', sans-serif;
   --avatar-color-1: #f44336;
   --avatar-color-2: #e91e63;
   --avatar-color-3: #9c27b0;
@@ -26,16 +29,18 @@
 [data-theme='dark'] {
   --background-main: #2f2e2c;
   --header-and-menu: #121212;
+  --login-background: #2f2e2c;
   --home-icons: #ddce99;
   --header-and-menu-icons: #f5f5f5;
-  --column-and-selection-background: #796980;
+  --constrast-icons: #f5f5f5;
+  --inversed-constrast-font-color: #2f2e2c;
+  --column-and-selection-background: #0c0c0c;
   --note-background: #b4a3ba;
   --note-answer-background: #a692ae;
   --selection-description: #ffeaa3;
-  --base-font-color: #ffffff;
-  --menu-font-color: #ffffff;
+  --base-font-color: #f5f5f5;
+  --menu-font-color: #f5f5f5;
   --button-font-color: #796980;
   --button-selected-font-color: #b054d1;
-  --selection-font-color: #000000;
-  --column-font-color: #9e7b00;
+  --column-font-color: #f5f5f5;
 }
