--- a/src/views/login/styles.css
+++ b/src/views/login/styles.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: var(--header-and-menu);
+  background-color: var(--login-background);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +31,7 @@
 .login__message {
   margin-top: 8px;
   font-size: x-large;
-  color: white;
+  color: var(--header-and-menu-icons);
 }
 
 @media (orientation: landscape) {
