--- a/src/Var.css
+++ b/src/Var.css
@@ -1,4 +1,5 @@
 :root {
+  --font-base: 'Poppins', sans-serif;
   --background-main: #f5f5f5;
   --header-and-menu: #694e73;
   --login-background: #694e73;
@@ -7,23 +8,22 @@
   --header-and-menu-icons: #f5f5f5;
   --constrast-icons: #2f2e2c;
   --constrast-font-color: #2f2e2c;
-  --dark-font-color: #121212;
-  --inversed-constrast-font-color: #f5f5f5;
-  --column-and-selection-background: #adc2b9;
+  --board-background: #adc2b9;
   --note-background: #f5f5f5;
-  --note-answer-background: #e1e1e1;
-  --selection-description: #ccdbd5;
+  --note-answer-background: #c2c2c2;
   --base-font-color: #000000;
   --menu-font-color: #ffffff;
   --button-font-color: #694E73;
   --button-selected-font-color: #b054d1;
   --column-font-color: #274035;
-  --font-base: 'Poppins', sans-serif;
   --avatar-color-1: #f44336;
   --avatar-color-2: #e91e63;
   --avatar-color-3: #9c27b0;
   --avatar-color-4: #2196f3;
   --avatar-color-5: #4caf50;
+  --dark-color: #121212;
+  --light-color: #f5f5f5;
+  --constrast-color: #121212;
 }
 
 [data-theme='dark'] {
@@ -32,15 +32,15 @@
   --login-background: #2f2e2c;
   --home-icons: #ddce99;
   --header-and-menu-icons: #f5f5f5;
+  --constrast-font-color: #f5f5f5;
   --constrast-icons: #f5f5f5;
-  --inversed-constrast-font-color: #2f2e2c;
-  --column-and-selection-background: #0c0c0c;
-  --note-background: #b4a3ba;
-  --note-answer-background: #a692ae;
-  --selection-description: #ffeaa3;
+  --board-background: #694e73;
+  --note-background: #a594ab;
+  --note-answer-background: #b2a0b9;
   --base-font-color: #f5f5f5;
   --menu-font-color: #f5f5f5;
-  --button-font-color: #796980;
+  --button-font-color: #442950;
   --button-selected-font-color: #b054d1;
   --column-font-color: #f5f5f5;
+  --constrast-color: #f5f5f5;
 }
