--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -2,7 +2,7 @@
   height: 20px;
   display: flex;
   flex-direction: row;
-  color: var(--column-font-color);
+  color: var(--dark-color);
 }
 
 .note__note_content__column__column_header h2 {
@@ -16,4 +16,8 @@
 
 .note__note_content__column__column_header__button {
   margin-left: auto;
+}
+
+.note__note_content__column__column_header__button .svg_button svg {
+  fill: var(--dark-color);
 }
