--- a/src/components/alert/styles.css
+++ b/src/components/alert/styles.css
@@ -1,3 +1,11 @@
 .custom_alert .MuiSnackbar-root {
   bottom: 28px;
 }
+
+.custom_alert .MuiAlert-message {
+  color: var(--light-color);
+}
+
+.custom_alert .MuiSvgIcon-root {
+  fill: var(--light-color);
+}
