--- a/src/components/tag_list/styles.css
+++ b/src/components/tag_list/styles.css
@@ -9,7 +9,7 @@
 
 .tag_list.MuiPaper-root .MuiChip-root {
   border: 1px solid;
-  border-color: var(--column-font-color);
+  border-color: var(--dark-color);
   background-color: inherit;
   margin-right: 5px;
   font-size: smaller;
