--- a/src/views/main/notes/column_dialog/header/styles.css
+++ b/src/views/main/notes/column_dialog/header/styles.css
@@ -1,6 +1,9 @@
 .note__column_dialog__header.MuiCardHeader-root {
   background-color: var(--header-and-menu);
-  color: white;
+}
+
+.note__column_dialog__header .MuiTypography-root.MuiCardHeader-title {
+  color: var(--dark-color);
 }
 
 .note__column_dialog__header.MuiCardHeader-root .MuiTypography-h5 {
