--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -8,7 +8,7 @@
   width: 100%;
   background-color: var(--column-font-color);
   font-weight: bold;
-  color: white;
+  color: var(--dark-color);
 }
 
 .note_info_dialog__title.MuiDialogTitle-root {
@@ -44,7 +44,7 @@
 .note__info_dialog__title__question .MuiInputBase-root {
   font-size: 1.3rem;
   font-weight: bold;
-  color: white;
+  color: var(--dark-color);
   height: 100%;
 }
 
@@ -53,5 +53,5 @@
 }
 
 .note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root svg {
-  fill: white;
+  fill: var(--header-and-menu-icons);
 }
