--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -50,6 +50,7 @@
 
 .note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root {
   padding-top: 7px;
+  margin-left: auto;
 }
 
 .note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root svg {
