Feat(Contact): Quebra no nome do usuário na mensagem de erro de número já criado

--- a/src/views/main/contacts/contact_dialog_form/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/styles.css
@@ -1,3 +1,8 @@
 .contact-form .MuiDialog-paper {
   margin: 20px;
 }
+
+.dialog-form__content .MuiFormHelperText-root.Mui-error.MuiFormHelperText-filled {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
