--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -16,7 +16,7 @@
 .drawer_navigation__drawer__visible__menu__icon {
   width: 25px;
   height: 25px;
-  fill: var(--header-and-menu-icons);
+  fill: var(--light-color);
 }
 
 .drawer_navigation__drawer__visible .MuiListItemIcon-root {
@@ -25,7 +25,7 @@
 
 .drawer_navigation__drawer__visible
   .MuiTypography-root.MuiListItemText-primary {
-  color: var(--menu-font-color);
+  color: var(--light-color);
 }
 
 .drawer_navigation__drawer__invisible {
@@ -49,11 +49,11 @@
 }
 
 .drawer_navigation__drawer__header svg {
-  fill: var(--header-and-menu-icons);
+  fill: var(--light-color);
 }
 
 .drawer_navigation__drawer__header .MuiSvgIcon-root {
-  fill: var(--header-and-menu-icons);
+  fill: var(--light-color);
 }
 
 .drawer_navigation__drawer__visible .MuiList-root.MuiList-padding {
@@ -67,7 +67,7 @@
 }
 
 .drawer_navigation__drawer__visible .user {
-  color: var(--menu-font-color);
+  color: var(--light-color);
   padding: 8px 16px;
 }
 
