--- a/src/Var.css
+++ b/src/Var.css
@@ -1,76 +1,110 @@
 :root {
+  /* Definicoes gerais */
   --font-base: 'Poppins', sans-serif;
-  --background-main: #f5f5f5;
-  --header-and-menu: #694e73;
-  --login-background: #694e73;
-  --home-icons: #adc2b9;
-  --header-and-menu-icons: #f5f5f5;
-  --constrast-icons: #2f2e2c;
-  --constrast-font-color: #2f2e2c;
-  --board-background: #adc2b9;
-  --note-background: #f5f5f5;
-  --note-answer-background: #c2c2c2;
-  --base-font-color: #000000;
-  --menu-font-color: #ffffff;
-  --button-font-color: #694E73;
-  --button-selected-font-color: #b054d1;
-  --column-border: #274035;
-  --column-font-color: #274035;
-  --other-details: #f5f5f5;
-  --tag-color: #D1A300;
+  --dark-color: #121212;
+  --light-color: #f5f5f5;
+
   --avatar-color-1: #f44336;
   --avatar-color-2: #e91e63;
   --avatar-color-3: #9c27b0;
   --avatar-color-4: #2196f3;
   --avatar-color-5: #4caf50;
-  --dark-color: #121212;
-  --light-color: #f5f5f5;
-  --constrast-color: #121212;
+
+  /* // Light Mode // */
+  /* Fundos */
+  --login-background: #694e73;
+  --background-main: #f5f5f5;
+  
+  /* Fontes */
+  --base-font-color: #121212;
   --selection:#adc2b9;
+
+  /* Menu e cabecalho */
+  --header-and-menu: #694e73;
+
+  /* Home */
+  --home-icons: #adc2b9;
+  
+  /* Notas */
+  --board-background: #adc2b9;
+  --column-border: #274035;
+  --column-font-color: #274035;
+
+  --note-background: #f5f5f5;
+  --note-answer-background: #c2c2c2;
+
+  /* Botoes */
+  --button-font-color: #694E73;
+  --button-selected-font-color: #b054d1;
+
+  /* Outros */
+  --constrast-color: #2f2e2c;
+  --other-details: #f5f5f5;
+  --tag-color: #D1A300;
 }
 
 [data-theme='dark'] {
-  --background-main: #2f2e2c;
-  --header-and-menu: #121212;
+  /* Fundos */
   --login-background: #2f2e2c;
-  --home-icons: #FFEAA3;
-  --header-and-menu-icons: #f5f5f5;
-  --constrast-font-color: #f5f5f5;
-  --constrast-icons: #f5f5f5;
-  --board-background: #694e73;
-  --note-background: #a594ab;
-  --note-answer-background: #b2a0b9;
+  --background-main: #2f2e2c;
+  
+  /* Fontes */
   --base-font-color: #f5f5f5;
-  --menu-font-color: #f5f5f5;
-  --button-font-color: #442950;
+  --selection: #a594ab;
+
+  /* Menu e cabecalho */
+  --header-and-menu: #121212;
+
+  /* Home */
+  --home-icons: #FFEAA3;
+  
+  /* Notas */
+  --board-background: #694e73;
   --column-border: #2D1B35;
-  --button-selected-font-color: #b054d1;
   --column-font-color: #f5f5f5;
+
+  --note-background: #a594ab;
+  --note-answer-background: #a08aa8;
+
+  /* Botoes */
+  --button-font-color: #442950;
+  --button-selected-font-color: #b054d1;
+
+  /* Outros */
   --constrast-color: #f5f5f5;
   --other-details: #474747;
-  --tag-color: #D1A300;
-  --selection: #a594ab;
+  --tag-color: #D1A300;  
 }
 
 [data-theme='high-contrast'] {
-  --background-main: #f5f5f5;
-  --header-and-menu: #694e73;
+  /* Fundos */
   --login-background: #694e73;
+  --background-main: #f5f5f5;
+  
+  /* Fontes */
+  --base-font-color: #121212;
+  --selection: #F1D881;
+
+  /* Menu e cabecalho */
+  --header-and-menu: #694e73;
+
+  /* Home */
   --home-icons: #F1D881;
-  --header-and-menu-icons: #f5f5f5;
-  --constrast-font-color: #2f2e2c;
-  --constrast-icons:#2f2e2c;
+  
+  /* Notas */
   --board-background: #F1D881;
+  --column-border: #D1A300;
+  --column-font-color: #D1A300;
+
   --note-background: #FFF3CB;
   --note-answer-background: #EFE1B1;
-  --base-font-color: #000000;
-  --menu-font-color: #f5f5f5;
+
+  /* Botoes */
   --button-font-color: #442950;
-  --column-border: #D1A300;
   --button-selected-font-color: #b054d1;
-  --column-font-color: #D1A300;
-  --constrast-color: #121212;
+
+  /* Outros */
+  --constrast-color:#2f2e2c;
   --other-details: #f5f5f5;
   --tag-color: #442950;
-  --selection: #F1D881;
 }
