--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -34,7 +34,7 @@
   height: 40px;
   font-size: larger;
   font-weight: bold;
-  color: var(--constrast-font-color);
+  color: var(--constrast-color);
   margin-top: 4px;
 }
 
