--- a/src/Var.css
+++ b/src/Var.css
@@ -76,7 +76,7 @@
   --tag-color: #D1A300;  
 }
 
-[data-theme='high-contrast'] {
+[data-theme='high_contrast'] {
   /* Fundos */
   --login-background: #694e73;
   --background-main: #f5f5f5;
@@ -94,7 +94,7 @@
   /* Notas */
   --board-background: #F1D881;
   --column-border: #D1A300;
-  --column-font-color: #D1A300;
+  --column-font-color:  #f5f5f5;
 
   --note-background: #FFF3CB;
   --note-answer-background: #EFE1B1;
@@ -106,5 +106,5 @@
   /* Outros */
   --constrast-color:#2f2e2c;
   --other-details: #f5f5f5;
-  --tag-color: #442950;
+  --tag-color: #a594ab;
 }
