--- a/src/Var.css
+++ b/src/Var.css
@@ -22,6 +22,7 @@
   --avatar-color-3: #9c27b0;
   --avatar-color-4: #2196f3;
   --avatar-color-5: #4caf50;
+  --light-color: #f5f5f5;
 }
 
 [data-theme='dark'] {
