Feat(About Us image and opacity to menu background icons)

--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -71,6 +71,10 @@
   background-image: url(../../../assets/icons/menu_icons/settings.svg);
 }
 
+.home .home__grid__paper .paper__img.__a {
+  background-image: url(../../../assets/icons/menu_icons/about_us.svg);
+}
+
 .home .home__paper__string {
   font-size: 5.5vmin;
   font-weight: bold;
