Feat(GrantFlow): flow para requerir a autorização do usuário
Ao adicionar um novo contato é requerido se o usuário quer ativer o serviço. Caso diga sim a autorização é requerida. Ao dizer não é salvo que o usuário não permitiu e é dito que ele pode voltar a permitir dentro de configurações

--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -52,3 +52,29 @@
   font-size: large;
   margin-bottom: 40px;
 }
+
+.settings__grant {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.settings__grant p {
+  margin: 0;
+}
+
+.settings__grant__switch {
+  margin-left: auto;
+}
+
+.settings__grant__switch .MuiSwitch-track {
+  height: 18px;
+  border-radius: 18px;
+}
+
+.MuiSwitch-root.settings__grant__switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
