--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -1,4 +1,7 @@
 .button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   border-radius: 8px;
   border: 0px;
