--- a/src/components/button/text_button/style.css
+++ b/src/components/button/text_button/style.css
@@ -1,4 +1,14 @@
 .text_button{
     background-color: transparent;
     color: var(--base-font-color);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 0.85rem;
+    padding: 0.4rem 1rem;
+    padding-left: 0.4rem;
+}
+
+.text_button p {
+    margin: 0;
 }
