--- a/src/views/main/contacts/contact_dialog_card/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_card/header/styles.css
@@ -5,3 +5,11 @@
     max-width: 200px;
     overflow-x: hidden;
 }
+
+.contact_dialog_content_header .MuiCardHeader-content{
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 200px;
+    overflow-x: hidden;
+}
