--- a/src/components/button/google_login/styles.css
+++ b/src/components/button/google_login/styles.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 2rem;
 }
 
 .google_login_button .google_login_button__error {
@@ -21,4 +22,13 @@
 
 .google_login_button__button .MuiTypography-root {
   color: var(--dark-font-color);
+}
+
+.google_login_button__text_button {
+  background-color: var(--background-main);
+  border-radius: 2rem;
+}
+
+.google_login_button__loader {
+  border-radius: 2rem;
 }
