--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   color: var(--column-border);
+  align-items: center;
 }
 
 .note__note_content__column__column_header h2 {
@@ -15,20 +16,23 @@
 }
 
 .note__note_content__column__column_header__button_div {
-  margin-left: auto;
   display: flex;
   flex-direction: row;
+  margin-left: auto;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .note__note_content__column__column_header__button_div__button {
-  height: 18px;
-  width: 18px;
   padding: 0;
-  margin: 8px;
+  height: 42px;
+  width: 30px;
 }
 
 .note__note_content__column__column_header__button_div__button svg {
   fill: var(--column-font-color);
   height: 18px;
   width: 18px;
+  margin-left: auto;
+  margin-right: 0;
 }
