--- a/src/views/privacy_policy/styles.css
+++ b/src/views/privacy_policy/styles.css
@@ -52,3 +52,18 @@ span {
 ul {
     list-style-type: square;
 }
+
+a {
+    text-decoration: none;
+    color: var(--tag-color);
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--board-background);
+}
+
+a:active {
+    text-decoration: none;
+    color: var(--tag-color)
+}
