Feat(not found page updated)

--- a/src/views/not_found/styles.css
+++ b/src/views/not_found/styles.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #36b344;
+  background-color: #F1D881;
   padding: 10px;
 }
 
