--- a/src/Var.css
+++ b/src/Var.css
@@ -81,7 +81,7 @@
 
   /* Outros */
   --constrast-color: #f5f5f5;
-  --inv-constrast-color: #2f2e2c;
+  --inv-contrast-color: #2f2e2c;
   --other-details: #474747;
   --tag-color: #D1A300;  
 }
@@ -115,7 +115,7 @@
 
   /* Outros */
   --constrast-color:#2f2e2c;
-  --inv-constrast-color: #f5f5f5;
+  --inv-contrast-color: #f5f5f5;
   --other-details: #f5f5f5;
   --tag-color: #a594ab;
 }
