--- a/src/components/drawer_navigation/content/app_bar/styles.css
+++ b/src/components/drawer_navigation/content/app_bar/styles.css
@@ -12,8 +12,6 @@
 }
 
 .drawer__navigation__app_bar__button svg {
-  width: 60px;
-  height: 60px;
-  transform: translate3d(-40px, 0, 0);
-  z-index: 999;
+  margin-left: 0.8rem;
+  margin-right: 0.8rem;
 }
