--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -38,7 +38,7 @@
   margin-top: 4px;
 }
 
-.home .home__grid__paper {
+.home .home__grid__button {
   width: 100%;
   height: 100%;
   background-color: var(--home-icons);
@@ -47,18 +47,12 @@
   justify-content: center;
 }
 
-.home .home__grid__paper .img {
+.home .home__grid__button svg {
   width: 90%;
   padding: 8px;
   height: auto;
   fill: var(--dark-color);
-}
-
-.home .home__paper__string {
-  font-size: 5.5vmin;
-  font-weight: bold;
-  color: white;
-  text-shadow: 0 0 2px black;
+  opacity: 0.7;
 }
 
 @media (orientation: landscape) {
@@ -68,7 +62,7 @@
     height: 200px;
   }
 
-  .home .home__grid__paper .img {
+  .home .home__grid__button .img {
     width: 90%;
     height: 80%;
   }
