--- a/src/views/main/contacts/contact_dialog_form/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/header/styles.css
@@ -5,3 +5,8 @@
     max-width: 200px;
     overflow-x: hidden;
 }
+
+.contact_dialog_form_header .MuiCardHeader-action {
+    display: flex;
+    flex-direction: row;
+}
