Fix(Classes): Mudança de nomes de classes no css

--- a/src/views/main/contacts/contact_dialog_card/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_card/header/styles.css
@@ -1,15 +1,13 @@
-.contact_dialog_content_header .MuiTypography-root.MuiCardHeader-title{
+.contact_dialog_content_header .MuiTypography-root {
     display: block;
     white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 200px;
     overflow-x: hidden;
+    text-align: justify;
 }
 
 .contact_dialog_content_header .MuiCardHeader-content{
     display: block;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     max-width: 200px;
     overflow-x: hidden;
 }
