--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -92,3 +92,7 @@
   margin-top: 1rem;
   text-align: center;
 }
+
+.drawer_navigation__drawer__visible .MuiTypography-root.MuiListItemText-primary {
+  text-align: justify;
+}
