--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -22,6 +22,7 @@
   line-height: initial;
   font-size: small;
   margin-bottom: 0;
+  margin-top: 0;
   font-weight: bold;
   color: var(--column-border);
 }
