--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -13,6 +13,8 @@
   white-space: nowrap;
   overflow: hidden;
   margin-bottom: 0;
+  margin-top: 0;
+  font-weight: normal;
 }
 
 .note__note_content__column__column_header__button_div {
