--- a/src/views/privacy_policy/styles.css
+++ b/src/views/privacy_policy/styles.css
@@ -13,57 +13,57 @@
     overflow-x: hidden;
 }
 
-h1 {
+.privacy_policy h1 {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 5px;
 }
 
-h2 {
+.privacy_policy h2 {
     font-size: 18px;
     font-weight: 600;
     margin: 30px 0px 15px 0px;
 }
 
-h3 {
+.privacy_policy h3 {
     font-size: 16px;
     font-style: italic;
     margin: 20px 0px 10px 0px;   
 }
 
-h4 {
+.privacy_policy h4 {
     font-size: 14px;
     font-style: italic;
     margin: 15px 0px 10px 0px;
     color: #636363;
 }
 
-p {
+.privacy_policy p {
     margin: 10px 0px;
 }
 
-span {
+.privacy_policy span {
     font-size: 12px;
     text-align: center;
     color: #636363;
 }
 
-ul {
+.privacy_policyul {
     list-style-type: square;
 }
 
-a {
+.privacy_policy a {
     text-decoration: none;
     color: var(--tag-color);
 }
 
-a:hover {
+.privacy_policy a:hover {
     text-decoration: none;
     color: var(--board-background);
 }
 
-a:active {
+.privacy_policy a:active {
     text-decoration: none;
     color: var(--tag-color)
 }
