--- a/src/views/not_found/styles.css
+++ b/src/views/not_found/styles.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #F1D881;
+  background-color: #f1d881;
   padding: 10px;
 }
 
