--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -13,7 +13,7 @@
   width: 40px;
   height: auto;
   margin-right: 8px;
-  fill: var(--constrast-color);
+  fill: var(--contrast-color);
 }
 
 .notes__header
