--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -35,7 +35,7 @@
   width: 18px;
   height: 18px;
   margin-right: 7px;
-  fill: var(--inv-constrast-color);
+  fill: var(--inv-contrast-color);
 }
 
 .settings__save_button.MuiButtonBase-root {
